# nlp-id

./: .gitignore  LICENSE  Makefile  README.md  lemmatizer.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
lemmatizer/: kata-dasar.txt  lemmatizer.py
nlp-id/: __init__.py
nlp-id/lemmatizer/: __init__.py
nlp_id/: __init__.py  lemmatizer.py  postag.py  stopword.py  tokenizer.py
nlp_id/data/: dataset_postag.txt  non_clitics.txt  stopword.txt
nlp_id/notebooks/: svm.ipynb
tests/: README.md
tests/lemmatizer/: test_lemmatizer.py
tests/postag/: __init__.py  test_postag.py
tests/stopword/: test_stopword.py
tests/tokenizer/: test_tokenizer.py
