[tool.poetry]
name = "nlp-id"
version = "0.1.16.0"
description = "Kumparan's NLP Services"
authors = ["Zavli Juwantara <zavli.juwantara@kumparan.com>"]
repository = "https://github.com/kumparan/NLP-ID"
maintainers = [
    "Frandy Eddy <eddy.frandy@gmail.com>",
    "Dhanang Hadhi Sasmita <dhananghadhi@gmail.com>",
    "Aslam Hadi H<aslam.hadi@kumparan.com>",
    "Ghefira Nur Fatimah Widyasari<ghefira.fatimah@kumparan.com>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
scikit-learn = "1.5.1"
nltk = "3.8.1"
wget = "3.2"
huggingface-hub = "0.23.4"
scipy = "1.13.1"
numpy = "1.26.4"


[tool.poetry.group.dev.dependencies]
pytest = "8.2.2"
pip-audit = "2.7.3"
black = "24.4.2"
isort = "5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
