[tool.poetry]
name = "nlp-id"
version = "0.1.19.0"
description = "kumparan's NLP Services"
authors = ["Zavli Juwantara <zavli.juwantara@kumparan.com>"]
repository = "https://github.com/kumparan/NLP-ID"
maintainers = [
    "Frandy Eddy <eddy.frandy@gmail.com>",
    "Dhanang Hadhi Sasmita <dhananghadhi@gmail.com>",
    "Aslam Hadi H<aslam.hadi@kumparan.com>",
    "Ghefira Nur Fatimah Widyasari<ghefira.fatimah@kumparan.com>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scikit-learn = "1.6.1"
nltk = "3.9.1"
wget = "3.2"
huggingface-hub = "0.31.1"
scipy = "1.15.3"
numpy = "2.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "8.2.2"
pip-audit = "2.7.3"
black = "24.4.2"
isort = "5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
